INFRAOP-5971: nifi config

--- a/hadoop/conf/nifi/nifi-registry.properties
+++ b/hadoop/conf/nifi/nifi-registry.properties
@@ -21,7 +21,7 @@ nifi.registry.web.http.host=
 nifi.registry.web.http.port=
 nifi.registry.web.https.host=
 nifi.registry.web.https.port=18443
-nifi.registry.web.jetty.working.directory=./work/jetty
+nifi.registry.web.jetty.working.directory={{ nifi.data_dir }}/work/jetty
 nifi.registry.web.jetty.threads=200
 
 # security properties #
@@ -46,7 +46,7 @@ nifi.registry.providers.configuration.file=./conf/providers.xml
 
 # legacy database properties, used to migrate data from original DB to new DB below
 # NOTE: Users upgrading from 0.1.0 should leave these populated, but new installs after 0.1.0 should leave these empty
-nifi.registry.db.directory=
+nifi.registry.db.directory={{nifi.data_dir}}/database
 nifi.registry.db.url.append=
 
 # database properties
