INFRAOP-5971: nifi-registry ldap setup

--- a/hadoop/conf/nifi/bootstrap-registry.conf
+++ b/hadoop/conf/nifi/bootstrap-registry.conf
@@ -46,3 +46,11 @@ java.arg.6=-Djava.protocol.handler.pkgs=sun.net.www.protocol
 
 # Master key in hexadecimal format for encrypted sensitive configuration values
 nifi.registry.bootstrap.sensitive.key=
+{% if nifi.jmx_export %}
+#JMX Monitoring
+java.arg.18=-Dcom.sun.management.jmxremote.local.only=true
+java.arg.19=-Dcom.sun.management.jmxremote
+java.arg.20=-Dcom.sun.management.jmxremote.authenticate=false
+java.arg.21=-Dcom.sun.management.jmxremote.ssl=false
+java.arg.22=-javaagent:/var/lib/prometheus_jmx_javaagent/jmx_prometheus_javaagent-0.10.jar=27018:/etc/nifi-registry/conf/jmx.yaml
+{% endif %}
