INFRAOP-5971: fix typos

--- a/hadoop/conf/nifi/nifi-registry.properties
+++ b/hadoop/conf/nifi/nifi-registry.properties
@@ -36,7 +36,7 @@ nifi.registry.security.needClientAuth=false
 nifi.registry.security.authorizers.configuration.file=./conf/authorizers.xml
 nifi.registry.security.authorizer=managed-authorizer
 nifi.registry.security.identity.providers.configuration.file=./conf/identity-providers.xml
-nifi.registry.security.identity.provider=
+nifi.registry.security.identity.provider={% if nifi.registry_ldap %}ldap-identity-provider{% endif %}
 
 # sensitive property protection properties #
 # nifi.registry.sensitive.props.additional.keys=
