INFRAOP-0: move nifi work dir onto data_dir

--- a/hadoop/conf/nifi/nifi.properties
+++ b/hadoop/conf/nifi/nifi.properties
@@ -43,7 +43,7 @@ nifi.templates.directory=./conf/templates
 nifi.ui.banner.text={{ grains['cluster_id'] }}
 nifi.ui.autorefresh.interval=30 sec
 nifi.nar.library.directory=./lib
-nifi.nar.working.directory=./work/nar/
+nifi.nar.working.directory={{ nifi.data_dir }}/work/nar/
 nifi.documentation.working.directory=./work/docs/components
 
 ####################
