INFRAOP-0: move nifi work dir onto data_dir

--- a/hadoop/conf/nifi/nifi.properties
+++ b/hadoop/conf/nifi/nifi.properties
@@ -44,7 +44,7 @@ nifi.ui.banner.text={{ grains['cluster_id'] }}
 nifi.ui.autorefresh.interval=30 sec
 nifi.nar.library.directory=./lib
 nifi.nar.working.directory={{ nifi.data_dir }}/work/nar/
-nifi.documentation.working.directory=./work/docs/components
+nifi.documentation.working.directory={{ nifi.data_dir}}/work/docs/components
 
 ####################
 # State Management #
