INFRAOP-0: added nifi context path for knox-token access

--- a/hadoop/conf/nifi/nifi.properties
+++ b/hadoop/conf/nifi/nifi.properties
@@ -157,7 +157,7 @@ nifi.web.https.network.interface.default=
 nifi.web.jetty.working.directory=./work/jetty
 nifi.web.jetty.threads=200
 nifi.web.max.header.size=16 KB
-nifi.web.proxy.context.path={% if knox_url %}/{{ knox.gateway_path }}/{{ grains['cluster_id']}}/nifi,/{{knox.gateway_path }}/{{grains['cluster_id']}}-sso/nifi-app{% endif %}
+nifi.web.proxy.context.path={% if knox_url %}/{{ knox.gateway_path }}/{{ grains['cluster_id']}}/nifi,/{{knox.gateway_path }}/{{grains['cluster_id']}}-sso/nifi-app,/{{knox.gateway_path }}/{{grains['cluster_id']}}-jwt/nifi-app{% endif %}
 nifi.web.proxy.host={% if knox_url %}{{ knox_url }}:{{ knox.gateway_port}}{% endif %}
 
 # security properties #
