INFRAOP-6274: allow remote sql backend for ranger and hue

--- a/hadoop/conf/hue/hue.ini
+++ b/hadoop/conf/hue/hue.ini
@@ -672,8 +672,8 @@
     {%- if hue.database_type == 'mysql' %}
       name={{ hue.database_name }}
       engine=mysql
-      host=localhost
-      port=3306
+      host={{ hue.database_host }}
+      port={{ hue.database_port }}
       user=hue
       password={{ hue.database_password }}
       options={}
