--- a/hadoop/conf/ranger/admin.install.properties
+++ b/hadoop/conf/ranger/admin.install.properties
@@ -55,7 +55,7 @@ SQL_CONNECTOR_JAR=/usr/share/java/mysql-connector-java.jar
 #db_host=host:port/ServiceName  # for DB_FLAVOR=ORACLE                          #for Service example: db_host=localhost:1521/XE
 db_root_user=root
 db_root_password={{ ranger.db_root_pass }}
-db_host=localhost
+db_host={{ ranger.db_host}}:{{ ranger.db_port }}
 #SSL config
 db_ssl_enabled=false
 db_ssl_required=false
