--- a/hadoop/conf/ranger/admin.install.properties
+++ b/hadoop/conf/ranger/admin.install.properties
@@ -257,24 +257,29 @@ LOGFILE=$PWD/logfile
 LOGFILES="$LOGFILE"
 
 JAVA_BIN='java'
-JAVA_VERSION_REQUIRED='1.7'
+JAVA_VERSION_REQUIRED='1.8'
 JAVA_ORACLE='Java(TM) SE Runtime Environment'
 
 #mysql_create_user_file=${PWD}/db/mysql/create_dev_user.sql
-mysql_core_file=db/mysql/xa_core_db.sql
+#v1 mysql_core_file=db/mysql/xa_core_db.sql
+mysql_core_file=db/mysql/optimized/current/ranger_core_db_mysql.sql
 mysql_audit_file=db/mysql/xa_audit_db.sql
 #mysql_asset_file=${PWD}/db/mysql/reset_asset.sql
 
 #oracle_create_user_file=${PWD}/db/oracle/create_dev_user_oracle.sql
-oracle_core_file=db/oracle/xa_core_db_oracle.sql
+#v1: oracle_core_file=db/oracle/xa_core_db_oracle.sql
+oracle_core_file=db/oracle/optimized/current/ranger_core_db_oracle.sql
 oracle_audit_file=db/oracle/xa_audit_db_oracle.sql
 #oracle_asset_file=${PWD}/db/oracle/reset_asset_oracle.sql
 #
-postgres_core_file=db/postgres/xa_core_db_postgres.sql
+#v1 postgres_core_file=db/postgres/xa_core_db_postgres.sql
+postgres_core_file=db/postgres/optimized/current/ranger_core_db_postgres.sql 
 postgres_audit_file=db/postgres/xa_audit_db_postgres.sql
-sqlserver_core_file=db/sqlserver/xa_core_db_sqlserver.sql
+#v1 sqlserver_core_file=db/sqlserver/xa_core_db_sqlserver.sql
+sqlserver_core_file=db/sqlserver/optimized/current/ranger_core_db_sqlserver.sql
 sqlserver_audit_file=db/sqlserver/xa_audit_db_sqlserver.sql
 #
-sqlanywhere_core_file=db/sqlanywhere/xa_core_db_sqlanywhere.sql
+#v1: sqlanywhere_core_file=db/sqlanywhere/xa_core_db_sqlanywhere.sql
+sqlanywhere_core_file=db/sqlanywhere/optimized/current/ranger_core_db_sqlanywhere.sql
 sqlanywhere_audit_file=db/sqlanywhere/xa_audit_db_sqlanywhere.sql
 cred_keystore_filename=$app_home/WEB-INF/classes/conf/.jceks/rangeradmin.jceks
