--- a/hadoop/conf/ranger/admin.install.properties
+++ b/hadoop/conf/ranger/admin.install.properties
@@ -74,6 +74,7 @@ db_user=rangeradmin
 db_password={{ ranger.ranger_pass }}
 
 # change password. Password for below mentioned users can be changed only once using this property.
+
 rangerAdmin_password={{ ranger.ranger_pass }}
 rangerTagsync_password={{ ranger.ranger_pass }}
 rangerUsersync_password={{ ranger.ranger_pass }}
@@ -94,7 +95,16 @@ audit_solr_urls=
 {% endif %}
 audit_solr_user=
 audit_solr_password=
-audit_solr_zookeepers={{ zk.connection_string }}
+audit_solr_zookeepers=
+
+audit_solr_collection_name=ranger_audits
+#solr Properties for cloud mode
+audit_solr_config_name=ranger_audits
+audit_solr_no_shards=1
+audit_solr_no_replica=1
+audit_solr_max_shards_per_node=1
+audit_solr_acl_user_list_sasl=solr,infra-solr
+
 
 #------------------------- DB CONFIG - END ----------------------------------
 
@@ -259,6 +269,11 @@ LOGFILES="$LOGFILE"
 JAVA_BIN='java'
 JAVA_VERSION_REQUIRED='1.8'
 JAVA_ORACLE='Java(TM) SE Runtime Environment'
+
+ranger_admin_max_heap_size=1g
+#retry DB and Java patches after the given time in seconds.
+PATCH_RETRY_INTERVAL=120
+STALE_PATCH_ENTRY_HOLD_TIME=10
 
 #mysql_create_user_file=${PWD}/db/mysql/create_dev_user.sql
 #v1 mysql_core_file=db/mysql/xa_core_db.sql
