--- a/hadoop/conf/nifi/nifi.properties
+++ b/hadoop/conf/nifi/nifi.properties
@@ -134,7 +134,7 @@ nifi.components.status.snapshot.frequency=1 min
 # Site to Site properties
 nifi.remote.input.host={{ grains['fqdn'] }}
 nifi.remote.input.secure={%- if hadoop.secure_mode -%}true{%- else -%}false{%- endif %}
-nifi.remote.input.socket.port=
+nifi.remote.input.socket.port=11443
 nifi.remote.input.http.enabled=true
 nifi.remote.input.http.transaction.ttl=30 sec
 nifi.remote.contents.cache.expiration=30 secs
@@ -253,6 +253,15 @@ nifi.cluster.node.max.concurrent.requests=100
 nifi.cluster.firewall.file=
 nifi.cluster.flow.election.max.wait.time=1 mins
 nifi.cluster.flow.election.max.candidates=
+
+
+
+# cluster load balancing properties #
+nifi.cluster.load.balance.host=
+nifi.cluster.load.balance.port=6342
+nifi.cluster.load.balance.connections.per.node=4
+nifi.cluster.load.balance.max.thread.count=8
+nifi.cluster.load.balance.comms.timeout=30 sec
 
 # zookeeper properties, used for cluster management #
 nifi.zookeeper.connect.string={{ zk.connection_string }}
