--- a/hadoop/conf/hue/hue.ini
+++ b/hadoop/conf/hue/hue.ini
@@ -29,6 +29,8 @@
 
 [desktop]
 
+  enable_prometheus=True
+
   # Set this to a random string, the longer the better.
   # This is used for secure hashing in the session store.
   secret_key=NzmkUdcv5Np7p7matcjI
