--- a/hadoop/conf/nifi/nifi.properties
+++ b/hadoop/conf/nifi/nifi.properties
@@ -158,7 +158,9 @@ nifi.web.jetty.working.directory=./work/jetty
 nifi.web.jetty.threads=200
 nifi.web.max.header.size=16 KB
 nifi.web.proxy.context.path={% if knox_url %}/{{ knox.gateway_path }}/{{ grains['cluster_id']}}/nifi,/{{knox.gateway_path }}/{{grains['cluster_id']}}-sso/nifi-app,/{{knox.gateway_path }}/{{grains['cluster_id']}}-jwt/nifi-app{% endif %}
-nifi.web.proxy.host={% if knox_url %}{{ knox_url }}:{{ knox.gateway_port}}{% endif %}
+#adding the port produces many warning messages in the log, since version 1.9.2
+#nifi.web.proxy.host={% if knox_url %}{{ knox_url }}:{{ knox.gateway_port}}{% endif %}
+nifi.web.proxy.host={% if knox_url %}{{ knox_url }}{% endif %}
 
 # security properties #
 nifi.sensitive.props.key=
