--- a/hadoop/conf/hue/hue.ini
+++ b/hadoop/conf/hue/hue.ini
@@ -268,6 +268,7 @@
 
   # Timeout in seconds for REST calls.
   ## rest_conn_timeout=120
+  rest_conn_timeout=1000
 
   # A json file containing a list of log redaction rules for cleaning sensitive data
   # from log files. It is defined as:
@@ -1114,6 +1115,7 @@
 
   # Timeout in seconds for thrift calls to Hive service
   ## server_conn_timeout=120
+  server_conn_timeout=1000
 
   # Choose whether to use the old GetLog() thrift call from before Hive 0.14 to retrieve the logs.
   # If false, use the FetchResults() thrift call from Hive 1.0 or more instead.
@@ -1196,6 +1198,7 @@
 
   # Timeout in seconds for thrift calls
   ## server_conn_timeout=120
+  server_conn_timeout=1000
 
   # Hue will try to close the Impala query when the user leaves the editor page.
   # This will free all the query resources in Impala, but also make its results inaccessible.
