Upgrade to new salt version

--- a/hadoop/conf/hdfs/ranger.install.properties
+++ b/hadoop/conf/hdfs/ranger.install.properties
@@ -59,7 +59,7 @@ COMPONENT_INSTALL_DIR_NAME={{ hadoop.alt_home }}
 #XAAUDIT.SOLR.FILE_SPOOL_DIR=/var/log/hadoop/hdfs/audit/solr/spool
 
 {%- set solr_target = 'G@role:solr and G@clustername:' + grains['cluster_id'] -%}
-{%- set solr_grains = salt['mine.get'](solr_target, 'grains.item', expr_form='compound') -%}
+{%- set solr_grains = salt['mine.get'](solr_target, 'grains.item', tgt_type='compound') -%}
 {%- if solr_grains.items()|length > 0 %}
 {% set solr_host = solr_grains|first() %}
 {% set solr_fqdn = solr_grains[solr_host]['fqdn'] %}
