--- a/hadoop/conf/hive/ranger.install.properties
+++ b/hadoop/conf/hive/ranger.install.properties
@@ -23,7 +23,7 @@
 # Example:
 # POLICY_MGR_URL=http://policymanager.xasecure.net:6080
 {%- set ranger_target = 'G@role:ranger and G@clustername:' + grains['cluster_id'] -%} 
-{%- set ranger_grains = salt['mine.get'](ranger_target, 'grains.item', expr_form='compound') -%} 
+{%- set ranger_grains = salt['mine.get'](ranger_target, 'grains.item', tgt_type='compound') -%} 
 {%- if ranger_grains.items()|length > 0 %}
 {% set ranger_host = ranger_grains|first() %}
 {% set ranger_fqdn = ranger_grains[ranger_host]['fqdn'] %}
@@ -63,7 +63,7 @@ COMPONENT_INSTALL_DIR_NAME={{ hive.install_dir }}
 #XAAUDIT.SOLR.FILE_SPOOL_DIR=/var/log/hive/audit/solr/spool
 
 {%- set solr_target = 'G@role:solr and G@clustername:' + grains['cluster_id'] -%}
-{%- set solr_grains = salt['mine.get'](solr_target, 'grains.item', expr_form='compound') -%}
+{%- set solr_grains = salt['mine.get'](solr_target, 'grains.item', tgt_type='compound') -%}
 {%- if solr_grains.items()|length > 0 %}
 {% set solr_host = solr_grains|first() %}
 {% set solr_fqdn = solr_grains[solr_host]['fqdn'] %}
