--- a/hadoop/conf/ranger/usersync.install.properties
+++ b/hadoop/conf/ranger/usersync.install.properties
@@ -25,7 +25,7 @@ ranger_base_dir = /etc/ranger
 #  POLICY_MGR_URL = http://policymanager.xasecure.net:6080
 #
 {%- set ranger_target = 'G@role:ranger and G@clustername:' + grains['cluster_id'] -%} 
-{%- set ranger_grains = salt['mine.get'](ranger_target, 'grains.item', expr_form='compound') -%} 
+{%- set ranger_grains = salt['mine.get'](ranger_target, 'grains.item', tgt_type='compound') -%} 
 {%- if ranger_grains.items()|length > 0 %}
 {% set ranger_host = ranger_grains|first() %}
 {% set ranger_fqdn = ranger_grains[ranger_host]['fqdn'] %}
