INFRAOP-8150: switch ldap auth to userPrincipalName

--- a/hadoop/conf/hue/hue.ini
+++ b/hadoop/conf/hue/hue.ini
@@ -529,7 +529,7 @@
     use_start_tls=true
     bind_dn="{{ranger.ldap_user}}"
     bind_password={{ ranger.ldap_pass }}
-    ldap_username_pattern="{{ hue.ldap_username_pattern }}"
+    #ldap_username_pattern="{{ hue.ldap_username_pattern }}"
     search_bind_authentication=true
     {%- endif %}
     [[[users]]]
@@ -541,7 +541,8 @@
       ## user_name_attr=sAMAccountName
       {%- if hadoop.secure_mode %}
       user_filter={{ hue.ldap_user_filter }}
-      user_name_attr=sAMAccountName
+      #user_name_attr=sAMAccountName
+      user_name_attr=userPrincipalName
       {%- endif %}
 
     [[[groups]]]
