INFRAOP-8150: fixes username attribute for ranger

--- a/hadoop/conf/ranger/usersync.install.properties
+++ b/hadoop/conf/ranger/usersync.install.properties
@@ -153,7 +153,7 @@ SYNC_LDAP_USER_SEARCH_FILTER = {{ ranger.ldap_scrape_userfilter }}
 # attribute from user entry that would be treated as user name
 # please customize the value to suit your deployment
 # default value: cn
-SYNC_LDAP_USER_NAME_ATTRIBUTE = cn
+SYNC_LDAP_USER_NAME_ATTRIBUTE = userPrincipalName
 
 # attribute from user entry whose values would be treated as 
 # group values to be pushed into Policy Manager database
