INFRAOP-8150: fixes nslcd lookup

--- a/hadoop/conf/nslcd.conf
+++ b/hadoop/conf/nslcd.conf
@@ -37,3 +37,6 @@ tls_cacertfile /etc/ssl/certs/ca-certificates.crt
 nss_min_uid 1000
 map    passwd loginShell       "/bin/false"
 
+map    passwd uid           userPrincipalName
+map    passwd uidNumber     objectSid:{{ ranger.ldap_ad_domain_sid }}
+map    passwd gidNumber     objectSid:{{ ranger.ldap_ad_domain_sid }}
