INFRAOP-8150: disables referals for ldap queries

--- a/hadoop/conf/nslcd.conf
+++ b/hadoop/conf/nslcd.conf
@@ -12,6 +12,7 @@ gid nslcd
 
 # The location at which the LDAP server(s) should be reachable.
 uri ldaps://{{ ranger.ldap_host }}:{{ ranger.ldap_port }}
+referrals no
 
 # The search base that will be used for all queries.
 base {{ ranger.ldap_searchbase }}
